@@ -1,3 +1,12 @@
+2011-08-23  Siddhesh Poyarekar  <siddhesh.poyarekar@gmail.com>
+
+	PR c++/50055
+	* g++.dg/gcov/gcov-7.C: New test.
+
+2011-08-16  Jason Merrill  <jason@redhat.com>
+
+	* g++.dg/ext/attr-used-1.C: New.
+
 2011-08-03  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/49948
