@@ -1,3 +1,14 @@
+2011-08-23  Siddhesh Poyarekar  <siddhesh.poyarekar@gmail.com>
+
+	PR c++/50055
+	* except.c (begin_eh_spec_block): Build EH_SPEC block on the
+	same line as the function.
+
+2011-08-16  Jason Merrill  <jason@redhat.com>
+
+	* pt.c (instantiate_class_template_1): If DECL_PRESERVE_P is set
+	on a member function or static data member, call mark_used.
+
 2011-08-02  Jakub Jelinek  <jakub@redhat.com>
 
 	* cp-tree.h (finish_omp_atomic): Adjust prototype.
